# internal/handler/common/check_results.go
@@ -11,20 +11,22 @@ import (
 // @Summary      CheckResults
 // @Description  CheckResults
 // @Produce      json
+// @Param        CheckResultsRequest   body      models.CheckResultsRequest  true "CheckResultsRequest"
 // @Success      200  {object}  models.CheckResultsResponse
 // @Failure      400  {object}  models.BadRequestResponse
 // @Failure      500  {object}  models.InternalServerErrorResponse
-// @Router       /check_results [get]
+// @Router       /check_results [post]
 func (h *handler) CheckResults(ctx echo.Context) error {
-	userID, ok := ctx.Get("user_id").(int64)
-	if !ok {
-		return ctx.JSON(http.StatusBadRequest, models.BadRequestResponse{ErrorMsg: "invalid user_id"})
+	var request models.CheckResultsRequest
+	if err := ctx.Bind(&request); err != nil {
+		ctx.Set("error", err.Error())
+		return ctx.JSON(http.StatusBadRequest, models.BadRequestResponse{ErrorMsg: err.Error()})
 	}
 
 	ctxBack := context.Background()
-
-	response, err := h.ctrl.CheckResults(ctxBack, userID)
+	response, err := h.ctrl.CheckResults(ctxBack, request)
 	if err != nil {
+		ctx.Set("error", err.Error())
 		return ctx.JSON(http.StatusInternalServerError, models.InternalServerErrorResponse{ErrorMsg: err.Error()})
 	}
 
