# internal/handler/setup_routes.go
@@ -6,10 +6,12 @@ import (
 )
 
 func SetupRoutes(e *echo.Echo, com common.Handler) {
-	e.GET("check_results", com.CheckResults)
+	e.POST("check_results", com.CheckResults)
 	e.POST("auth_user", com.AuthUser)
 	e.POST("create_user", com.CreateUser)
 	e.POST("get_tasks_from_test", com.GetTasksFromTest)
 	e.GET("get_tests", com.GetTests)
 	e.POST("send_answers", com.SendAnswers)
+	e.POST("insert_test", com.InsertTest)
+	e.POST("insert_task", com.InsertTask)
 }
